@@ -1,0 +1,15 @@
+unspecified-encoding:10:0::"Using open without explicitly specifying an encoding"
+unspecified-encoding:11:0::"Using open without explicitly specifying an encoding"
+unspecified-encoding:12:0::"Using open without explicitly specifying an encoding"
+unspecified-encoding:13:0::"Using open without explicitly specifying an encoding"
+unspecified-encoding:14:0::"Using open without explicitly specifying an encoding"
+unspecified-encoding:23:5::"Using open without explicitly specifying an encoding"
+unspecified-encoding:26:5::"Using open without explicitly specifying an encoding"
+unspecified-encoding:30:5::"Using open without explicitly specifying an encoding"
+unspecified-encoding:35:0::"Using open without explicitly specifying an encoding"
+unspecified-encoding:36:0::"Using open without explicitly specifying an encoding"
+unspecified-encoding:37:0::"Using open without explicitly specifying an encoding"
+unspecified-encoding:38:0::"Using open without explicitly specifying an encoding"
+unspecified-encoding:47:5::"Using open without explicitly specifying an encoding"
+unspecified-encoding:50:5::"Using open without explicitly specifying an encoding"
+unspecified-encoding:54:5::"Using open without explicitly specifying an encoding"
